added user interface for the game

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./jv.js"></script>
+    <script src="./jv.js" defer></script>
+    <link href="./styles.css" rel="stylesheet">
 </head>
 <body>
-    <h1>OPEN CONSOLE</h1>
+    <h1 class = 'header'>FIRST TO FIVE WINS</h1>
+    <div class="buttons">
+        <button class="btn">ROCK</button>
+        <button class="btn">PAPER</button>
+        <button class="btn">SCISSORS</button>
+    </div>
+    <div class = "output">
+        <div id="score"></div>
+        <div id = "result"></div>
+    </div>
 </body>
 </html>
